--- a/public/projects/creations/docker-marketplace/index.html
+++ b/public/projects/creations/docker-marketplace/index.html
@@ -8,7 +8,7 @@
 
   
   
-    <meta property="og:image" content="http://localhost:1313/my-cv/img/V%C6%B0%C6%A1ng%20L%C3%A2m.png" />
+    <meta property="og:image" content="http://localhost:1313/my-cv/img/TraTriTam.png" />
     <meta property="og:title" content="Trà Trí Tâm | Docker image for Bitbucket CI/CD Pipelines  &#34;shipit&#34;" />   
   
   <meta property="og:description" content="Provides required dependencies and additional utilities to simplify and codify the process of building, testing and delivering Atlassian plugins all the way to the live marketplace.&lt;ul&gt; &lt;li&gt;Executes integration/AUT level tests against all stated compatible versions for the product&lt;/li&gt;&lt;li&gt;Uploads generated artifact to Atlassian marketplace&lt;/li&gt;&lt;li&gt;Provides corresponding metadata indicating version, release notes, and compatibility&lt;/li&gt;&lt;/ul&gt;" />
@@ -41,7 +41,7 @@
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Trà Trí Tâm</span>
     <span class="d-none d-lg-block">
-      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/my-cv/img/V%c6%b0%c6%a1ng%20L%c3%a2m.png" alt="">
+      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/my-cv/img/TraTriTam.png" alt="">
     </span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
