--- a/public/projects/creations/marketplace/index.html
+++ b/public/projects/creations/marketplace/index.html
@@ -8,7 +8,7 @@
 
   
   
-    <meta property="og:image" content="http://localhost:1313/my-cv/img/V%C6%B0%C6%A1ng%20L%C3%A2m.png" />
+    <meta property="og:image" content="http://localhost:1313/my-cv/img/TraTriTam.png" />
     <meta property="og:title" content="Trà Trí Tâm | Atlassian Marketplace Plugins" />   
   
   <meta property="og:description" content="Multiple plugins used by thousands of teams that provide enhanced functionality of Atlassian’s core products (primarily JIRA and Bamboo) to enrich CI/CD capabilities, DevOps automation, or productivity. Functionality spans user interface, web services and persistence." />
@@ -41,7 +41,7 @@
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Trà Trí Tâm</span>
     <span class="d-none d-lg-block">
-      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/my-cv/img/V%c6%b0%c6%a1ng%20L%c3%a2m.png" alt="">
+      <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/my-cv/img/TraTriTam.png" alt="">
     </span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
