Sua ten muc Kinh Nghiem

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -82,7 +82,7 @@
   <img id="qr-code" 
   class="qrcode" 
   alt="Scannable QR code with contact info" 
-  src="https://quickchart.io/qr?text=%0d%0aBEGIN%3aVCARD%0d%0aVERSION%3a4.0%0d%0a%0d%0a%0d%0aN%3aT%c3%a2m%3bTr%c3%a0%20Tr%c3%ad%3b%3b%3b%0d%0aFN%3aTr%c3%a0%20Tr%c3%ad%20T%c3%a2m%0d%0a%0d%0a%0d%0aTEL%3bTYPE%3dWORK%2cVOICE%3a0797873821%0d%0a%0d%0a%0d%0aEMAIL%3bTYPE%3dINTERNET%2cPREF%3atamtra2004%40gmail.com%0d%0a%0d%0a%0d%0aEMAIL%3bTYPE%3dINTERNET%2cWORK%3a%0d%0a%0d%0a%0d%0aPHOTO%3bTYPE%3dJPG%3bVALUE%3dURI%3ahttp%3a%2f%2flocalhost%3a1313%2fmy-cv%2fimg%2fTraTriTam.png%0d%0a%0d%0a%0d%0aORG%3aTr%c6%b0%e1%bb%9dng%20%c4%90%e1%ba%a1i%20h%e1%bb%8dc%20C%c3%b4ng%20ngh%e1%bb%87%20TP.HCM%20%28HUTECH%29%0d%0a%0d%0a%0d%0aTITLE%3a%0d%0a%0d%0a%0d%0aURL%3ahttp%3a%2f%2flocalhost%3a1313%2fmy-cv%2f%0d%0a%0d%0aEND%3aVCARD%0d%0a"/>
+  src="https://quickchart.io/qr?text=%0d%0aBEGIN%3aVCARD%0d%0aVERSION%3a4.0%0d%0a%0d%0a%0d%0aN%3aT%c3%a2m%3bTr%c3%a0%20Tr%c3%ad%3b%3b%3b%0d%0aFN%3aTr%c3%a0%20Tr%c3%ad%20T%c3%a2m%0d%0a%0d%0a%0d%0aTEL%3bTYPE%3dWORK%2cVOICE%3a0797873821%0d%0a%0d%0a%0d%0aEMAIL%3bTYPE%3dINTERNET%2cPREF%3atamtra2004%40gmail.com%0d%0a%0d%0a%0d%0aEMAIL%3bTYPE%3dINTERNET%2cWORK%3a%0d%0a%0d%0a%0d%0aPHOTO%3bTYPE%3dJPG%3bVALUE%3dURI%3ahttp%3a%2f%2flocalhost%3a1313%2fmy-cv%2fimg%2fTraTriTam.png%0d%0a%0d%0a%0d%0aORG%3aTr%c6%b0%e1%bb%9dng%20%c4%90H%20C%c3%b4ng%20ngh%e1%bb%87%20TP.HCM%20%28HUTECH%29%0d%0a%0d%0a%0d%0aTITLE%3a%0d%0a%0d%0a%0d%0aURL%3ahttp%3a%2f%2flocalhost%3a1313%2fmy-cv%2f%0d%0a%0d%0aEND%3aVCARD%0d%0a"/>
 </div>
 
                   <div class="text-center">
